--- a/sass/components/_index_section_1.scss
+++ b/sass/components/_index_section_1.scss
@@ -1,6 +1,9 @@
 
 /********************** СЕКЦИЯ ЭФФЕКТИВНЫЕ РЕШЕНИЯ **************************/
 .effect-solving {
+    // @media screen and (max-width: 737px){
+    //     display: none;
+    // }
 text-align: center;
 min-height: 600px;
 /* max-width: 1600px; */
@@ -26,7 +29,12 @@ font-size: 44px;
 line-height: 1.364;
 letter-spacing: 0.06em;
 text-transform: uppercase;
-width: 696px;
+@media screen and (min-width: $desktop){
+    width: 696px;
+}
+@media screen and (min-width: $tablet){
+    width: 360px;
+}
 color: $white;
 
 margin: 0 auto;
