--- a/sass/components/_index_section_3.scss
+++ b/sass/components/_index_section_3.scss
@@ -1,5 +1,11 @@
 /***************************** СЕКЦИЯ ЧЕМ МЫ ЗАНИМАЕМСЯ *********************************/
 
+
+.whatarewedoing{
+        @media screen and (max-width: $desktop){
+        display: none;
+    }
+}
 /* используется не только в этой секции */
 .title-h2 {
     
