--- a/sass/components/_index_section_4.scss
+++ b/sass/components/_index_section_4.scss
@@ -10,27 +10,49 @@
     text-align: center;
    
 }
-.team-li {
+.team-set{
+    @extend %list;
+
+    @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -5px;
+    }
+    @media screen and (min-width: $desktop) {
+          margin: -15px;
+    }
     
+} 
+.team-li {
+
     /* box-shadow: 0px 2px 4px 0px $gray); */
     background-color: white;
     height: 428px;
 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: $mobile) {
         height: 622px;
      
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
         height: 536px;
+        flex-basis: calc((100% - 4 * 5px)/2);
+        margin: 5px;
  
     }
-    @media screen and (min-width: 1140px) {
+    @media screen and (min-width: $desktop) {
         height: 428px;
-
-
+        flex-basis: calc((100% - 8* 15px)/4);
+        margin: 15px;
     }
+    @media screen and (max-width: 737px) {
+
+        &:not(:last-child){
+            margin-bottom: 30px;
+        }
+    }
+
 }
 
 .team-name {
@@ -40,6 +62,8 @@
     letter-spacing: 0.03em;
     color: $h-color;
     padding-top: 20px;
+
+
 }
 .p-position {
     font-style: normal;
