--- a/css/main.css
+++ b/css/main.css
@@ -1326,16 +1326,16 @@ section.title {
 }
 
 .title-img {
+  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
   width: 370px;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
   margin: 0px;
   padding: 0px;
-  bottom: 70px;
+  bottom: 0px;
   text-align: center;
   font-weight: bold;
   font-size: 14px;
@@ -1452,10 +1452,10 @@ section.title {
   }
 }
 
-@media screen and (min-width: 1140px) {
+@media screen and (min-width: 1200px) {
   .container-social-network {
     width: 270px;
-    outline: 2px solid green;
+    outline: 2px solid yellow;
   }
 }
 
@@ -1464,7 +1464,7 @@ section.title {
   display: -ms-flexbox;
   display: flex;
   list-style: none;
-  padding: 0px 32px 30px 32px;
+  padding: 0px 32px 0px 32px;
 }
 
 .a-link:hover .hover::before {
