--- a/sass/components/_index_section_4.scss
+++ b/sass/components/_index_section_4.scss
@@ -28,7 +28,7 @@
     /* box-shadow: 0px 2px 4px 0px $gray); */
     background-color: white;
     height: 428px;
-
+ 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     @media screen and (min-width: $mobile) {
@@ -80,17 +80,17 @@
     width: 270px;
     justify-content:space-between;
     padding: 0;
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: $mobile) {
         width: 450px;
         outline: 2px solid tomato;
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
         width: 354px;
         outline: 2px solid blue;
     }
-    @media screen and (min-width: 1140px) {
+    @media screen and (min-width: $desktop) {
         width: 270px;
-        outline: 2px solid green;
+        outline: 2px solid yellow;
 
     }
 }
@@ -99,7 +99,7 @@
 .center-network {
     display: flex;
     list-style: none;
-    padding: 0px 32px 30px 32px;
+    padding: 0px 32px 0px 32px;
     
 }
 
