--- a/sass/components/_index_section_2.scss
+++ b/sass/components/_index_section_2.scss
@@ -44,14 +44,14 @@
 
 .features-set{
     @extend %list;
+    @include for-size(tablet){
+        display: flex;
+        flex-wrap: wrap;
+        margin: -5px;
 
-    @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -5px;
     }
-    @media screen and (min-width: $desktop) {
-          margin: -15px;
+    @include for-size(desktop){
+             margin: -15px;
     }
     
 } 
