--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,7 +13,7 @@
     $cubic:cubic-bezier(0.4, 0, 0.2, 1);
     $time:250ms;
     $mainFont: 'Roboto', sans-serif;
-    $mobile:480px;
-    $tablet:768px;
-    $desktop:1200px;
+    // $mobile:480px;
+    // $tablet:768px;
+    // $desktop:1200px;
     
