--- a/sass/components/_index_section_5.scss
+++ b/sass/components/_index_section_5.scss
@@ -1,30 +1,76 @@
 /*************************** СЕКЦИЯ ПОСТОЯННЫЕ КЛИЕНТЫ ***************************/
 
 .client-section{
- 
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 94px;
-    padding-bottom: 0px;
-    text-align: center;
+    @extend %list;
+    @include for-size(mobile){
+        margin: -5px;
+    }
+
+    @include for-size(tablet) {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
+    @include for-size(desktop) {
+        margin: -15px;
+    }
+    // margin-top: 0px;
+    // margin-bottom: 0px;
+    // padding-top: 94px;
+    // padding-bottom: 0px;
+    // text-align: center;
 }
 
+.item-client{
+
+    
+    @include for-size(mobile){
+        flex-basis: calc((100% - 4 * 5px)/2);
+        margin: 5px;
+    }
+    @include for-size(tablet){
+        flex-basis: calc((100% - 6 * 15px)/3);
+        margin: 15px;
+    }
+    @include for-size(desktop){
+        flex-basis: calc((100% - 12* 15px)/6);
+        margin: 15px;
+    }
+    @include for-size(tablet-only)
+    {
+        flex-basis: calc((100% - 4 * 5px)/2);
+        margin: 5px;
+        &:not(:last-child){
+            margin-bottom: 30px;
+        }
+    }
+}
 .client-icon-link{
     display: flex;
     justify-content: center;
     align-items: center;
+    @include for-size(mobile){
+    width: 210px;
+    height: 90px;
+    }
+    @include for-size(tablet){
+        width: 226px;
+        height: 90px;
+    }
+    @include for-size(desktop){
     width: 170px;
     height: 90px;
+    }
+
+   
+
     outline: 1px solid $cl-icon; 
     margin-bottom: 0px;
     margin-top: 0px;
     &:hover,
     &:focus {
         outline: 1px solid $accent-cl; 
-    } 
-
-
-    
+    }    
 }
 
 
