--- a/sass/components/_index_section_5.scss
+++ b/sass/components/_index_section_5.scss
@@ -5,7 +5,9 @@
     @include for-size(mobile){
         margin: -5px;
     }
-
+    @include for-size(tablet-only){
+        margin: -5px;
+    }
     @include for-size(tablet) {
         display: flex;
         flex-wrap: wrap;
@@ -38,8 +40,8 @@
     }
     @include for-size(tablet-only)
     {
-        flex-basis: calc((100% - 4 * 5px)/2);
-        margin: 5px;
+        // flex-basis: calc((100% - 4 * 5px)/2);
+        // margin: 5px;
         &:not(:last-child){
             margin-bottom: 30px;
         }
@@ -50,19 +52,18 @@
     justify-content: center;
     align-items: center;
     @include for-size(mobile){
-    width: 210px;
-    height: 90px;
+        width: 210px;
+        height: 90px;
     }
     @include for-size(tablet){
         width: 226px;
         height: 90px;
     }
     @include for-size(desktop){
-    width: 170px;
-    height: 90px;
+        width: 170px;
+        height: 90px;
     }
-
-   
+  
 
     outline: 1px solid $cl-icon; 
     margin-bottom: 0px;
