--- a/css/main.css
+++ b/css/main.css
@@ -700,6 +700,10 @@ section.title {
 
 /************************ ПОДВАЛ ОБОИХ СТРАНИЦ *************************/
 .footer-main {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 94px;
   padding-top: 60px;
   padding-bottom: 0;
@@ -793,8 +797,6 @@ section.title {
 .subscribe {
   color: #ffffff;
   padding: 0;
-  width: 570px;
-  height: 86px;
   text-transform: uppercase;
   font-style: normal;
   font-weight: bold;
@@ -808,6 +810,8 @@ section.title {
 @media (min-width: 1200px) {
   .subscribe {
     position: relative;
+    width: 570px;
+    height: 86px;
   }
 }
 
