--- a/css/main.css
+++ b/css/main.css
@@ -726,15 +726,19 @@ section.title {
   margin-left: auto;
   margin-right: auto;
   outline: 2px solid tomato;
-  width: 1200px;
   padding: 0 15px;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 767px) {
   .container-footer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     text-align: center;
   }
 }
@@ -824,10 +828,20 @@ section.title {
 @media (min-width: 1200px) {
   .subscribe {
     position: relative;
-    margin: 93px;
+    margin-left: 93px;
     width: 570px;
     height: 86px;
     background-color: aqua;
+  }
+}
+
+@media (max-width: 767px) {
+  .subscribe {
+    width: 450px;
+    background-color: aqua;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -888,13 +902,13 @@ section.title {
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 @media (min-width: 1200px) {
   .in-subscribe {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     position: absolute;
     top: 36px;
     left: 0;
@@ -1404,6 +1418,27 @@ section.title {
   text-align: center;
 }
 
+@media (min-width: 480px) {
+  .team-img {
+    height: 460px;
+    width: 450px;
+  }
+}
+
+@media (min-width: 768px) {
+  .team-img {
+    height: 374px;
+    width: 354px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .team-img {
+    width: 270px;
+    height: 260px;
+  }
+}
+
 @media (min-width: 768px) {
   .team-set {
     display: -webkit-box;
@@ -1424,7 +1459,6 @@ section.title {
 .team-li {
   /* box-shadow: 0px 2px 4px 0px $gray); */
   background-color: white;
-  height: 428px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -1433,12 +1467,14 @@ section.title {
 @media (min-width: 480px) {
   .team-li {
     height: 622px;
+    width: 450px;
   }
 }
 
 @media (min-width: 768px) {
   .team-li {
     height: 536px;
+    width: 354px;
     -ms-flex-preferred-size: calc((100% - 4 * 5px)/2);
         flex-basis: calc((100% - 4 * 5px)/2);
     margin: 5px;
@@ -1448,6 +1484,7 @@ section.title {
 @media (min-width: 1200px) {
   .team-li {
     height: 428px;
+    width: 270px;
     -ms-flex-preferred-size: calc((100% - 8* 15px)/4);
         flex-basis: calc((100% - 8* 15px)/4);
     margin: 15px;
@@ -1461,15 +1498,18 @@ section.title {
 }
 
 .team-name {
+  margin: 30px 0 0 0;
+  padding: 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.188;
   letter-spacing: 0.03em;
   color: #212121;
-  padding-top: 20px;
 }
 
 .p-position {
+  margin: 10px 0 16px 0;
+  padding: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -1479,8 +1519,6 @@ section.title {
 }
 
 .container-social-network {
-  /*outline: 2px solid tomato; */
-  width: 270px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -1513,7 +1551,24 @@ section.title {
   display: -ms-flexbox;
   display: flex;
   list-style: none;
-  padding: 0px 32px 0px 32px;
+}
+
+@media (min-width: 480px) {
+  .center-network {
+    padding: 0px 122px 0px 122px;
+  }
+}
+
+@media (min-width: 768px) {
+  .center-network {
+    padding: 0px 74px 0px 74px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .center-network {
+    padding: 0px 32px 0px 32px;
+  }
 }
 
 .a-link:hover .hover::before {
