--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -21,11 +21,13 @@
     margin-left: auto;
     margin-right: auto;
     outline: 2px solid tomato;
-    width: 1200px;
+    // width: 1200px;
     padding: 0 15px;
     
-    @include for-size(tablet){
+    @include for-size(tablet-only){
         display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
         text-align: center;
     }
     
@@ -102,26 +104,26 @@
 .subscribe { 
     @include for-size(desktop){
         position: relative;
-        margin: 93px;
+        margin-left: 93px;
         width: 570px;
         height: 86px;
         background-color: aqua;
     }
-    color: $white;
-     
-     padding: 0;
-     
+    @include for-size(tablet-only){
 
-     text-transform: uppercase;
- 
-
-     font-style: normal;
-     font-weight: bold;
-     font-size: 14px;
-     line-height: 1.43;
-     letter-spacing: 0.03em;
-     
-     text-decoration: none;
+        width: 450px;
+        background-color: aqua;
+        align-items: center;
+    }
+        color: $white;
+        padding: 0;
+        text-transform: uppercase;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.43;
+        letter-spacing: 0.03em;
+        text-decoration: none;
      /* background-color: aqua; */
 }
 .btn-subscribe{
@@ -180,8 +182,9 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
 
-    display: flex;
     @include for-size(desktop){
+        
+    display: flex;
     position: absolute;
     top: 36px;
     left: 0;
