--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -1,10 +1,11 @@
 /************************ ПОДВАЛ ОБОИХ СТРАНИЦ *************************/
 .footer-main{
+   
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-
+    outline: 2px solid darkorchid;
     padding-top: 60px;
     padding-bottom: 0;
     @include for-size(desktop){
@@ -12,30 +13,31 @@
     margin-top: 94px;
     }
     @include for-size(tablet-only){
-        height: 603px;
-        margin-top: 45px;
-        }
+    height: 603px;
+    margin-top: 45px;
+    }
     background-color: $bg-box;
 }
 
 .container-footer {
-
+  
     margin-left: auto;
     margin-right: auto;
     outline: 2px solid tomato;
-    // width: 1200px;
+
     padding: 0 15px;
-    
+    display: flex;
     @include for-size(tablet-only){
-        display: flex;
+
         flex-wrap: wrap;
         justify-content: space-evenly;
         text-align: center;
     }
     
     @include for-size(desktop){
-        display: flex;
+        width: 1200px;
         align-items: baseline;
+  
     }
     
 
@@ -76,7 +78,7 @@
    }
 
 @include for-size(mobile){
-    margin-top: 60px;
+
     margin-bottom: 60px;
  }
     width: 206px;
@@ -197,7 +199,7 @@
     padding-left: 16px;
     }
 
-    @include for-size(mobile){
+    @include for-size(tablet-only){
         margin-top: 20px;
         margin-bottom: 20px;
     }
