--- a/css/main.css
+++ b/css/main.css
@@ -987,7 +987,6 @@ section.title {
 
 /* ********************************************************************** */
 .backdrop {
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -997,6 +996,21 @@ section.title {
   visibility: visible;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 1200px) {
+  .backdrop {
+    position: fixed;
+  }
+}
+
+@media (max-width: 767px) {
+  .backdrop {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    padding-right: 15px;
+    padding-right: 15px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -1667,6 +1681,7 @@ section.title {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 90px;
   outline: 1px solid #AFB1B8;
   margin-bottom: 0px;
   margin-top: 0px;
@@ -1675,21 +1690,18 @@ section.title {
 @media (min-width: 480px) {
   .client-icon-link {
     width: 210px;
-    height: 90px;
   }
 }
 
 @media (min-width: 768px) {
   .client-icon-link {
     width: 226px;
-    height: 90px;
   }
 }
 
 @media (min-width: 1200px) {
   .client-icon-link {
     width: 170px;
-    height: 90px;
   }
 }
 
