--- a/sass/components/_index_modal.scss
+++ b/sass/components/_index_modal.scss
@@ -1,6 +1,15 @@
 
 .backdrop {
-    position: fixed;
+    @include for-size(desktop){
+        position: fixed;
+    }
+    @include for-size(tablet-only){
+       padding-top: 94px;
+       padding-bottom: 94px;
+       padding-right: 15px;
+       padding-right: 15px;
+    }
+    
     top: 0;
     left: 0;
     width: 100%;
