--- a/sass/components/_index_section_1.scss
+++ b/sass/components/_index_section_1.scss
@@ -15,7 +15,7 @@ background-image: linear-gradient(
     rgba(47,48,58,0.4),
     rgba(47,48,58,0.4)
     ),
-    url("../img/back_ground.jpg");
+    url("../img/hero/mobile/img-hero@2x.jpg");
 background-color:#2F303A;
 background-size: cover;
 
