--- a/sass/components/_index_section_1.scss
+++ b/sass/components/_index_section_1.scss
@@ -10,37 +10,38 @@ min-height: 600px;
 margin-left: auto;
 margin-right: auto;
 
-background-image: linear-gradient(  
-    to right,
-    rgba(47,48,58,0.4),
-    rgba(47,48,58,0.4)
-    ),
-    url("../img/hero/mobile/img-hero@2x.jpg");
-background-color:#2F303A;
-background-size: cover;
+// background-image: linear-gradient(  
+//     to right,
+//     rgba(47,48,58,0.4),
+//     rgba(47,48,58,0.4)
+//     ),
+//     url("../img/hero/mobile/img-hero@2x.jpg");
+// background-color:#2F303A;
+// background-size: cover;
 
-// @media screen and(max-width: 767px) {
-//     background-image: $gradient, url('/img/hero/mobile/img-hero.jpg');
-//     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-//       background-image: $gradient, url('/img/hero/mobile/img-hero@2x.jpg');
-//     }
 
-//   }
+  @media screen and(max-width: 767px) {
+      background-image: $gradient, url('/img/hero/mobile/img-hero.jpg');
+      @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+        background-image: $gradient, url('/img/hero/mobile/img-hero@2x.jpg');
+      }
 
-//   @media screen and(min-width: $tablet) {
-//      height: 600px;
-//     background-image: $gradient, url('/img/hero/tablet/img-hero.jpg');
-//     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-//       background-image: $gradient, url('/img/hero/tablet/img-hero@2x.jpg');
-//     }
-   
-//   }
-//      @media screen and(min-width: $desktop) {
-//     background-image: $gradient, url('/img/hero/desktop/img-hero.jpg');
-//     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-//       background-image: $gradient, url('/img/hero/desktop/Img-hero@2x.jpg');
-//     }
-// }  
+    }
+
+    @media screen and(min-width: $tablet) {
+       height: 600px;
+      background-image: $gradient, url('/img/hero/tablet/img-hero.jpg');
+      @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+        background-image: $gradient, url('/img/hero/tablet/img-hero@2x.jpg');
+      }
+    
+    }
+       @media screen and(min-width: $desktop) {
+      background-image: $gradient, url('/img/hero/desktop/img-hero.jpg');
+      @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+        background-image: $gradient, url('/img/hero/desktop/Img-hero@2x.jpg');
+      }
+  }  
 
 background-position: center;
 padding-top: 200px;
